--- a/suricata/assets/css/style.css
+++ b/suricata/assets/css/style.css
@@ -1,31 +1,85 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 :root {
-    --open-sans: "Open Sans", sans-serif;
-    --regular: 400;
-    --bold: 700;
     --black: #212529;
-    --white: white;
+    --white: #fff;
     --pink: #e83e8c;
-    --blue: #17a2b8;
+    --info: #17a2b8;
+}
 
-  }
+html,body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 10px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    color: #373A3C;
+}
 
-  .os-regular{
-    font-family: var(--open-sans);
-    font-weight: var(--regular);
-  }
-  .os-bold{
-    font-family: var(--open-sans);
-    font-weight: var(--bold);
-  }
-  .c-pink{
-    color: var(--pink);
-  }
-  .c-white{
+.bg-custom-primary{
+    background-color: var(--pink);
+}
+
+.bg-custom-secondary{
+    background-color: var(--info);
     color: var(--white);
-  }
-  .c-black{
-    color: var(--black);
-  }
-  .c-blue{
-    color: var(--blue);
-  }
+}
+
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 355, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+
+.navbar a{
+    font-size: 1.6rem;
+}
+
+h1{
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:"wdth" 100;
+    font-size: 3.5rem;
+    color: #707070;
+}
+
+h5{
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: #373A3C;
+}
+
+p{
+    font-size: 1.6rem;
+}
+
+a{
+    text-decoration: none;
+    font-size: 1.1rem;
+}
+
+footer{
+    padding: 5.8rem 0;
+}
+
+.icons-section{
+    font-size: 5.3rem;
+}
+
+.card-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.card{
+    width: 238px;
+    margin-bottom: 6.4rem;
+}
+
+@media (min-width: 992px) {
+    .card{
+        width: 248px;
+    }
+}
